[project]
name = "ai-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "gtts>=2.5.4",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "speechrecognition>=3.14.4",
    "streamlit>=1.52.2",
    "supabase>=2.27.0",
]
